refixed cors issues

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URL = mongodb+srv://obeewon20:Cq3Cgctj6pY0ZoYW@cluster0.ce9qbxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = theralink100
+CLIENT_URL=http://localhost:3000
 PORT = 8080
