--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGODB_URL = mongodb+srv://obeewon20:Cq3Cgctj6pY0ZoYW@cluster0.ce9qbxw.mongodb.
 JWT_SECRET = theralink100
 CLIENT_URL=https://f5tzn3-3000.csb.app
 PORT = 8080
+CLOUDINARY_CLOUD_NAME=ddysec1ou
+CLOUDINARY_API_KEY=559285818547245
+CLOUDINARY_API_SECRET=lZNW1ZQHHeyT6PdU-uXDQfuMTP0
