--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,14 @@
-/.git
-/node_modules
-.dockerignore
-.env
+
+node_modules
+npm-debug.log
+dist
+test
+.git
+.gitignore
 Dockerfile
+docker-compose.yml
+.env
+coverage
 fly.toml
+.md
+.log
