--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://obeewon20:Cq3Cgctj6pY0ZoYW@cluster0.ce9qbxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL = mongodb://abnat:medlink001@medilinkdbtujdkt:27017retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = theralink100
 CLIENT_URL=https://f5tzn3-3000.csb.app
 PORT = 8080
