--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URL = mongodb+srv://obeewon20:Cq3Cgctj6pY0ZoYW@cluster0.ce9qbxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = theralink100
-CLIENT_URL=https://x3v6j5-3000.csb.app/
+CLIENT_URL=https://x3v6j5-3000.csb.app
 PORT = 8080
 CLOUDINARY_CLOUD_NAME=ddysec1ou
 CLOUDINARY_API_KEY=559285818547245
